# FFmpeg

./: .gitignore  BUILD.bazel  README.md  config.asm  config.h  config_components.h  defs.bzl  shell.nix  test.txt
compat/: os2threads.h  strtod.c  w32dlfcn.h  w32pthreads.h
compat/cuda/: dynlink_loader.h
compat/msvcrt/: snprintf.c
doc/: print_options.c  tablegen.txt
doc/examples/: qsv_decode.c  transcode_aac.c
fftools/: cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_demux.c  ffmpeg_filter.c  ffmpeg_hw.c  ffmpeg_mux.c  ffmpeg_mux.h  ffmpeg_mux_init.c  ffmpeg_opt.c  ffplay.c  ffprobe.c  fopen_utf8.h  objpool.c  opt_common.c  opt_common.h  sync_queue.c  sync_queue.h  thread_queue.c
libavcodec/: 012v.c  4xm.c  8bps.c  8svx.c  a64multienc.c  aac.h  aac_ac3_parser.c  aac_ac3_parser.h  aac_defines.h  aaccoder.c  aaccoder_trellis.h  aaccoder_twoloop.h  aacdec.c  aacdec_fixed.c  aacdec_template.c  aacdectab.h  aacenc.c  aacenc.h  aacenc_tns.c  aacenc_utils.h  aacenctab.h  aacps.c  aacps.h  aacps_common.c  aacps_fixed_tablegen.h  aacps_tablegen.h  aacpsdsp_template.c  aacpsy.c  aacsbr.c  aacsbr_fixed.c  aacsbr_template.c  aacsbrdata.h  aactab.c  aactab.h  ac3.c  ac3.h  ac3_channel_layout_tab.h  ac3_parser.c  ac3dec.c  ac3dec.h  (+1011 more)
libavcodec/aarch64/: aacpsdsp_init_aarch64.c  aacpsdsp_neon.S  cabac.h  fft_init_aarch64.c  fft_neon.S  fmtconvert_init.c  fmtconvert_neon.S  h264chroma_init_aarch64.c  h264cmc_neon.S  h264dsp_init_aarch64.c  h264dsp_neon.S  h264idct_neon.S  h264pred_init.c  h264pred_neon.S  h264qpel_init_aarch64.c  h264qpel_neon.S  hevcdsp_idct_neon.S  hevcdsp_init_aarch64.c  hevcdsp_qpel_neon.S  hevcdsp_sao_neon.S  hpeldsp_init_aarch64.c  hpeldsp_neon.S  idctdsp_init_aarch64.c  idctdsp_neon.S  mdct_neon.S  me_cmp_init_aarch64.c  me_cmp_neon.S  mpegaudiodsp_init.c  mpegaudiodsp_neon.S  neontest.c  opusdsp_init.c  opusdsp_neon.S  pixblockdsp_init_aarch64.c  pixblockdsp_neon.S  rv40dsp_init_aarch64.c  sbrdsp_init_aarch64.c  sbrdsp_neon.S  simple_idct_neon.S  synth_filter_init.c  synth_filter_neon.S  (+19 more)
libavcodec/alpha/: asm.h  blockdsp_alpha.c  hpeldsp_alpha.c  idctdsp_alpha.c  me_cmp_alpha.c  mpegvideo_alpha.c  pixblockdsp_alpha.c
libavcodec/arm/: aac.h  aacpsdsp_init_arm.c  aacpsdsp_neon.S  ac3dsp_arm.S  ac3dsp_armv6.S  ac3dsp_init_arm.c  ac3dsp_neon.S  audiodsp_arm.h  audiodsp_init_arm.c  audiodsp_init_neon.c  audiodsp_neon.S  blockdsp_arm.h  blockdsp_init_arm.c  blockdsp_init_neon.c  blockdsp_neon.S  cabac.h  dca.h  fft_init_arm.c  fft_neon.S  fft_vfp.S  flacdsp_arm.S  flacdsp_init_arm.c  fmtconvert_init_arm.c  fmtconvert_neon.S  fmtconvert_vfp.S  g722dsp_init_arm.c  g722dsp_neon.S  h264chroma_init_arm.c  h264cmc_neon.S  h264dsp_init_arm.c  h264dsp_neon.S  h264idct_neon.S  h264pred_init_arm.c  h264pred_neon.S  h264qpel_init_arm.c  h264qpel_neon.S  hevcdsp_arm.h  hevcdsp_deblock_neon.S  hevcdsp_idct_neon.S  (+94 more)
libavdevice/: alldevices.c  alsa.c  alsa.h  alsa_dec.c  alsa_enc.c  android_camera.c  audiotoolbox.m  avdevice.c  avdevice.h  avdeviceres.rc  avfoundation.m  bktr.c  caca.c  decklink_common.cpp  decklink_common.h  decklink_common_c.h  decklink_dec.cpp  decklink_dec.h  decklink_dec_c.c  decklink_enc.cpp  decklink_enc.h  decklink_enc_c.c  dshow.c  dshow_capture.h  fbdev_common.c  fbdev_common.h  fbdev_dec.c  fbdev_enc.c  file_open.c  gdigrab.c  iec61883.c  internal.h  jack.c  kmsgrab.c  lavfi.c  libcdio.c  libdc1394.c  openal-dec.c  opengl_enc.c  opengl_enc_shaders.h  (+23 more)
libavfilter/: aeval.c  af_acontrast.c  af_acrossover.c  af_acrusher.c  af_adeclick.c  af_adecorrelate.c  af_adelay.c  af_adenorm.c  af_aderivative.c  af_adrc.c  af_adynamicequalizer.c  af_adynamicsmooth.c  af_aecho.c  af_aemphasis.c  af_aexciter.c  af_afade.c  af_afftdn.c  af_afftfilt.c  af_afir.c  af_afir.h  af_afirdsp.h  af_aformat.c  af_afreqshift.c  af_afwtdn.c  af_agate.c  af_aiir.c  af_alimiter.c  af_amerge.c  af_amix.c  af_amultiply.c  af_anequalizer.c  af_anlmdn.c  af_anlmdndsp.h  af_anlms.c  af_anull.c  af_apad.c  af_aphaser.c  af_apsyclip.c  af_apulsator.c  af_aresample.c  (+486 more)
libavformat/: 3dostr.c  4xm.c  a64.c  aacdec.c  aadec.c  aaxdec.c  ac3_channel_layout_tab.c  ac3dec.c  acedec.c  acm.c  act.c  adp.c  ads.c  adtsenc.c  adxdec.c  aea.c  afc.c  aiff.c  aiffdec.c  aiffenc.c  aixdec.c  allformats.c  alp.c  amr.c  amvenc.c  anm.c  apac.c  apc.c  ape.c  apetag.c  apm.c  apngdec.c  apngenc.c  aptxdec.c  aqtitledec.c  argo_asf.c  argo_asf.h  argo_brp.c  argo_cvg.c  asfcrypt.c  (+487 more)
libavutil/: adler32.c  adler32.h  aes.c  aes.h  aes_ctr.c  aes_ctr.h  aes_internal.h  ambient_viewing_environment.c  ambient_viewing_environment.h  attributes_internal.h  audio_fifo.c  audio_fifo.h  avassert.h  avsscanf.c  avstring.c  avstring.h  avutil.h  avutilres.rc  base64.c  blowfish.c  bprint.c  bprint.h  bswap.h  buffer.c  buffer_internal.h  camellia.c  cast5.c  channel_layout.c  channel_layout.h  common.h  cpu.c  cpu_internal.h  crc.c  crc.h  csp.c  csp.h  cuda_check.h  des.c  detection_bbox.c  detection_bbox.h  (+147 more)
libpostproc/: postprocess.c  postprocess_altivec_template.c  postprocess_internal.h  postprocess_template.c  postprocres.rc  version.c  version.h
libswresample/: audioconvert.c  audioconvert.h  dither.c  noise_shaping_data.c  options.c  rematrix.c  resample.c  resample.h  resample_dsp.c  resample_template.c  soxr_resample.c  swresample.c  swresample.h  swresample_frame.c  swresample_internal.h  swresampleres.rc  version.c  version.h
libswscale/: alphablend.c  gamma.c  half2float.c  hscale.c  hscale_fast_bilinear.c  input.c  options.c  output.c  rgb2rgb.c  rgb2rgb_template.c  slice.c  swscale.c  swscale.h  swscale_internal.h  swscale_unscaled.c  swscaleres.rc  utils.c  version.c  version.h  vscale.c  yuv2rgb.c
tests/: tiny_psnr.c
tools/: aviocat.c  crypto_bench.c  cws2fws.c  decode_simple.c  decode_simple.h  enum_options.c  ffescape.c  ffeval.c  ffhash.c  fourcc2pixfmt.c  gen-rc  graph2dot.c  ismindex.c  pktdumper.c  probetest.c  scale_slice_test.c  seek_print.c  sidxindex.c  target_bsf_fuzzer.c  target_dec_fuzzer.c  target_dem_fuzzer.c  uncoded_frame.c  venc_data_dump.c  zmqsend.c
(+640 files in other folders)
