load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

package(default_visibility = ["//visibility:public"])

string_flag(
    name = "tx_type",
    build_setting_default = "int32",
)

config_setting(
    name = "tx_float",
    flag_values = {
        ":tx_type": "float",
    },
)

config_setting(
    name = "tx_double",
    flag_values = {
        ":tx_type": "double",
    },
)

config_setting(
    name = "tx_int32",
    flag_values = {
        ":tx_type": "int32",
    },
)

cc_library(
    name = "config",
    hdrs = [
        "config.h",
    ],
    textual_hdrs = [
        "config.h",
    ],
    alwayslink = True,
)

cc_library(
    name = "va_copy",
    hdrs = [
        "compat/va_copy.h",
    ],
    textual_hdrs = [
        "compat/va_copy.h",
    ],
    alwayslink = True,
)

# cc_library(
#     name = "tx_type_in32",
#     srcs = [
#         "libavutil/tx_int32.c",
#         "libavutil/tx_int32.h",
#     ],
#     alwayslink = True,
# )

cc_library(
    name = "libavutil",
    srcs = [
        "libavcodec/mathops.h",
        "libavutil/adler32.c",
        "libavutil/adler32.h",
        "libavutil/aes.c",
        "libavutil/aes.h",
        "libavutil/aes_ctr.c",
        "libavutil/aes_ctr.h",
        "libavutil/aes_internal.h",
        "libavutil/ambient_viewing_environment.c",
        "libavutil/ambient_viewing_environment.h",
        "libavutil/attributes.h",
        "libavutil/attributes_internal.h",
        "libavutil/audio_fifo.c",
        "libavutil/audio_fifo.h",
        "libavutil/avassert.h",
        "libavutil/avconfig.h",
        "libavutil/avsscanf.c",
        "libavutil/avstring.c",
        "libavutil/avstring.h",
        "libavutil/avutil.h",
        "libavutil/base64.c",
        "libavutil/base64.h",
        "libavutil/blowfish.c",
        "libavutil/blowfish.h",
        "libavutil/bprint.c",
        "libavutil/bprint.h",
        "libavutil/bswap.h",
        "libavutil/buffer.c",
        "libavutil/buffer.h",
        "libavutil/buffer_internal.h",
        "libavutil/camellia.c",
        "libavutil/camellia.h",
        "libavutil/cast5.c",
        "libavutil/cast5.h",
        "libavutil/channel_layout.c",
        "libavutil/channel_layout.h",
        "libavutil/colorspace.h",
        "libavutil/common.h",
        "libavutil/cpu.c",
        "libavutil/cpu.h",
        "libavutil/cpu_internal.h",
        "libavutil/crc.c",
        "libavutil/crc.h",
        "libavutil/csp.c",
        "libavutil/csp.h",
        "libavutil/cuda_check.h",
        "libavutil/des.c",
        "libavutil/des.h",
        "libavutil/detection_bbox.c",
        "libavutil/detection_bbox.h",
        "libavutil/dict.c",
        "libavutil/dict.h",
        "libavutil/dict_internal.h",
        "libavutil/display.c",
        "libavutil/display.h",
        "libavutil/dovi_meta.c",
        "libavutil/dovi_meta.h",
        "libavutil/downmix_info.c",
        "libavutil/downmix_info.h",
        "libavutil/dynarray.h",
        "libavutil/encryption_info.c",
        "libavutil/encryption_info.h",
        "libavutil/error.c",
        "libavutil/error.h",
        "libavutil/eval.c",
        "libavutil/eval.h",
        "libavutil/ffmath.h",
        "libavutil/ffversion.h",
        "libavutil/fifo.c",
        "libavutil/fifo.h",
        "libavutil/file.c",
        "libavutil/file.h",
        "libavutil/file_open.c",
        "libavutil/file_open.h",
        "libavutil/film_grain_params.c",
        "libavutil/film_grain_params.h",
        "libavutil/fixed_dsp.c",
        "libavutil/fixed_dsp.h",
        "libavutil/float2half.c",
        "libavutil/float2half.h",
        "libavutil/float_dsp.c",
        "libavutil/float_dsp.h",
        "libavutil/frame.c",
        "libavutil/frame.h",
        "libavutil/getenv_utf8.h",
        "libavutil/half2float.c",
        "libavutil/half2float.h",
        "libavutil/hash.c",
        "libavutil/hash.h",
        "libavutil/hdr_dynamic_metadata.c",
        "libavutil/hdr_dynamic_metadata.h",
        "libavutil/hdr_dynamic_vivid_metadata.c",
        "libavutil/hdr_dynamic_vivid_metadata.h",
        "libavutil/hmac.c",
        "libavutil/hmac.h",
        "libavutil/hwcontext.c",
        "libavutil/hwcontext.h",
        "libavutil/hwcontext_internal.h",
        "libavutil/imgutils.c",
        "libavutil/imgutils.h",
        "libavutil/imgutils_internal.h",
        "libavutil/integer.c",
        "libavutil/integer.h",
        "libavutil/internal.h",
        "libavutil/intfloat.h",
        "libavutil/intmath.c",
        "libavutil/intmath.h",
        "libavutil/intreadwrite.h",
        "libavutil/lfg.c",
        "libavutil/lfg.h",
        "libavutil/libm.h",
        "libavutil/lls.c",
        "libavutil/lls.h",
        "libavutil/log.c",
        "libavutil/log.h",
        "libavutil/log2_tab.c",
        "libavutil/lzo.c",
        "libavutil/lzo.h",
        "libavutil/macos_kperf.c",
        "libavutil/macos_kperf.h",
        "libavutil/macros.h",
        "libavutil/mastering_display_metadata.c",
        "libavutil/mastering_display_metadata.h",
        "libavutil/mathematics.c",
        "libavutil/mathematics.h",
        "libavutil/md5.c",
        "libavutil/md5.h",
        "libavutil/mem.c",
        "libavutil/mem.h",
        "libavutil/mem_internal.h",
        "libavutil/motion_vector.h",
        "libavutil/murmur3.c",
        "libavutil/murmur3.h",
        "libavutil/objc.h",
        "libavutil/opt.c",
        "libavutil/opt.h",
        "libavutil/parseutils.c",
        "libavutil/parseutils.h",
        "libavutil/pca.c",
        "libavutil/pca.h",
        "libavutil/pixdesc.c",
        "libavutil/pixdesc.h",
        "libavutil/pixelutils.c",
        "libavutil/pixelutils.h",
        "libavutil/pixfmt.h",
        "libavutil/qsort.h",
        "libavutil/random_seed.c",
        "libavutil/random_seed.h",
        "libavutil/rational.c",
        "libavutil/rational.h",
        "libavutil/rc4.c",
        "libavutil/rc4.h",
        "libavutil/replaygain.h",
        "libavutil/reverse.c",
        "libavutil/reverse.h",
        "libavutil/ripemd.c",
        "libavutil/ripemd.h",
        "libavutil/samplefmt.c",
        "libavutil/samplefmt.h",
        "libavutil/sha.c",
        "libavutil/sha.h",
        "libavutil/sha512.c",
        "libavutil/sha512.h",
        "libavutil/slicethread.c",
        "libavutil/slicethread.h",
        "libavutil/softfloat.h",
        "libavutil/softfloat_ieee754.h",
        "libavutil/softfloat_tables.h",
        "libavutil/spherical.c",
        "libavutil/spherical.h",
        "libavutil/stereo3d.c",
        "libavutil/stereo3d.h",
        "libavutil/tablegen.h",
        "libavutil/tea.c",
        "libavutil/tea.h",
        "libavutil/thread.h",
        "libavutil/threadmessage.c",
        "libavutil/threadmessage.h",
        "libavutil/time.c",
        "libavutil/time.h",
        "libavutil/time_internal.h",
        "libavutil/timecode.c",
        "libavutil/timecode.h",
        "libavutil/timer.h",
        "libavutil/timestamp.h",
        "libavutil/tree.c",
        "libavutil/tree.h",
        "libavutil/twofish.c",
        "libavutil/twofish.h",
        "libavutil/tx.c",
        "libavutil/tx.h",
        # "libavutil/tx_template.c",
        "libavutil/utils.c",
        "libavutil/uuid.c",
        "libavutil/uuid.h",
        "libavutil/version.c",
        "libavutil/version.h",
        "libavutil/version_major.h",
        "libavutil/video_enc_params.c",
        "libavutil/video_enc_params.h",
        "libavutil/wchar_filename.h",
        "libavutil/xga_font_data.c",
        "libavutil/xga_font_data.h",
        "libavutil/xtea.c",
        "libavutil/xtea.h",
        "libavutil/tx_priv.h",
    ] + select({
        "@platforms//cpu:aarch64": glob([
            "libavutil/aarch64/*.c",
            "libavutil/aarch64/*.h",
            "libavutil/aarch64/*.S",
        ]),
        "@platforms//cpu:arm64": glob([
            "libavutil/arm/*.c",
            "libavutil/arm/*.h",
            "libavutil/arm/*.S",
        ]),
        "@platforms//cpu:x86_64": glob([
            "libavutil/x86/*.c",
            "libavutil/x86/*.h",
        ]) + [
            "libavcodec/x86/mathops.h",
        ],
        "//conditions:default": [],
    }),
    hdrs = ["libavutil/avutil.h"],
    copts = [
        "-w",
        "-fstrict-aliasing",
        "-std=c11",
        "-O3",
        "-g",
        "-fno-math-errno",
        "-fno-signed-zeros",
        "-fno-tree-vectorize",
        "-fomit-frame-pointer",
        "-pthread",
        "-D_FILE_OFFSET_BITS=64",
        "-D_GNU_SOURCE=1",
        "-D_ISOC99_SOURCE",
        "-D_LARGEFILE_SOURCE",
        "-D_POSIX_C_SOURCE=200112",
        "-D_REENTRANT",
        "-D_XOPEN_SOURCE=600",
        "-DHAVE_AV_CONFIG_H",
        "-DZLIB_CONST",
        "-Wall",
        "-Wdeclaration-after-statement",
        "-Wdisabled-optimization",
        "-Wempty-body",
        "-Werror=format-security",
        "-Werror=implicit-function-declaration",
        "-Werror=missing-prototypes",
        "-Werror=return-type",
        "-Werror=vla",
        "-Wformat",
        "-Wmissing-prototypes",
        "-Wno-format-zero-length",
        "-Wno-maybe-uninitialized",
        "-Wno-parentheses",
        "-Wno-pointer-sign",
        "-Wno-pointer-to-int-cast",
        "-Wno-switch",
        "-Wpointer-arith",
        "-Wredundant-decls",
        "-Wstrict-prototypes",
        "-Wtype-limits",
        "-Wundef",
        "-Wwrite-strings",
    ],
    linkstatic = True,
    textual_hdrs = glob([
        "libavutil/*_data.c",
        "libavutil/*_data.h",
        "libavutil/*_template.c",
        "libavutil/*_template.h",
    ]),
    deps = [
        ":config",
        ":va_copy",
    ],
    alwayslink = True,
)
