load("//third_party/ffmpeg:defs.bzl", "ffmpeg_copts", "libavutil_hdrs", "libavutil_srcs", "libswresample_hdrs", "libswresample_srcs", "libswresample_template_textual_hdrs")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "config",
    hdrs = [
        "config.h",
    ],
    textual_hdrs = [
        "config.h",
    ],
    alwayslink = True,
)

cc_library(
    name = "va_copy",
    hdrs = [
        "compat/va_copy.h",
    ],
    textual_hdrs = [
        "compat/va_copy.h",
    ],
    alwayslink = True,
)

cc_library(
    name = "libavutil",
    srcs = libavutil_srcs,
    hdrs = libavutil_hdrs,
    copts = ffmpeg_copts,
    linkstatic = True,
    textual_hdrs = glob([
        "libavutil/*_data.c",
        "libavutil/*_data.h",
        "libavutil/*_template.c",
        "libavutil/*_template.h",
    ]),
    deps = [
        ":config",
        ":va_copy",
    ],
    alwayslink = True,
)

cc_library(
    name = "libswresample_template",
    copts = ffmpeg_copts,
    linkstatic = True,
    textual_hdrs = libswresample_template_textual_hdrs,
    alwayslink = True,
)

cc_library(
    name = "libswresample",
    srcs = libswresample_srcs,
    hdrs = libswresample_hdrs,
    copts = ffmpeg_copts,
    linkstatic = True,
    deps = [
        ":config",
        ":libavutil",
        ":libswresample_template",
    ],
    alwayslink = True,
)
